--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>React-redux boilerplate</title>
+  <title>Craigslist Housing | by Yuxiang Chen</title>
 </head>
 
 <body>
